test/corpus/basic.txt
==================
Empty object
==================

{}

---

(file
  (object))

==================
Empty array
==================

[]

---

(file
  (array))

==================
Number as root
==================

42

---

(file
  (number))

==================
String as root
==================

"hello"

---

(file
  (string))

==================
Boolean true as root
==================

true

---

(file
  (true))

==================
Boolean false as root
==================

false

---

(file
  (false))

==================
Null as root
==================

null

---

(file
  (null))

==================
Negative number
==================

-42.5

---

(file
  (number))

==================
Hex number
==================

0xFF

---

(file
  (number))

==================
Infinity
==================

Infinity

---

(file
  (number))

==================
NaN
==================

NaN

---

(file
  (number))
